updated swagger annotations
