# docs/swagger.json
@@ -15,6 +15,77 @@
         "version": "1.0"
     },
     "host": "localhost:1337",
-    "basePath": "/api/v1",
-    "paths": {}
+    "paths": {
+        "/health-check": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Shows information if api is running",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/healthCheckController.HealthCheck"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/hello-world": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Simple list data example",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.HelloWorldPresenter"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "healthCheckController.HealthCheck": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "Server running!"
+                }
+            }
+        },
+        "models.HelloWorldPresenter": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string",
+                    "example": "ea68c913-2e60-487d-b108-26836271e500"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "jon doew"
+                }
+            }
+        }
+    }
 }
